--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+server.port=8000
+
+#Data Source properties
 spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url = jdbc:h2:file:C:/data/sample
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username= sa
 spring.datasource.password=
