--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Enabling H2 Console
 spring.h2.console.enabled=true
  
+ #mybatis configuration
+ mybatis.mapper-locations: classpath*:/mybatis/*.xml
+ mybatis.type-aliases-package: com.example.demo.entities
+ 
 # Custom H2 Console URL
 spring.h2.console.path=/h2-console
 
